--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,12 @@
     --bg-color: #ffffff;
     --text-color: #000000;
     --main-color: #8a88ff;
+    --primary-color: #5c48ee;
+    --primary-color-dark: #0f1e6a;
+    --secondary-color: #f9fafe;
+    --text-color2: #333333;
+    --white: #ffffff;
+    --max-width: 1200px;
 }
 
 body{
@@ -18,6 +24,8 @@ body{
     background: var(--bg-color);
     color: var(--text-color);
 }
+
+/* navbar */
 header{
     position: fixed;
     width: 100%;
@@ -27,9 +35,11 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: transparent;
+    background: #ffffff;
     padding: 28px 12%;
     transition: all .50s ease;
+    margin-bottom: 150px; /* Increase space */
+
 }
 
 .logo {
@@ -108,6 +118,125 @@ header{
     display: none;
 }
 
+/* landing page */
+
+.container{
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    min-height: calc(100vh - 100px);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
+   
+}
+
+.content__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 80px; /* Adjust this value to match the height of your header */
+
+}
+
+.content__container h1 {
+    font-size: 3rem;
+    font-weight: 400;
+    line-height: 3.5rem;
+    color: var(--primary-color-dark);
+    margin-bottom: 1rem;
+}
+
+.heading__1 {
+    font-weight: 700;
+}
+
+.heading__2 {
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.content__container p {
+
+    font-size: 1rem;
+    color: var(--text-color2);
+    margin-bottom: 2rem;
+
+}
+
+.content__container form {
+    display: flex;
+    align-items: center;
+}
+
+.content__container button {
+    width: fit-content;
+    padding: 1rem;
+    font-size: .8rem;
+    white-space: nowrap;
+    background-color: var(--primary-color);
+    color: var(--white);
+    outline: none;
+    border: none;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    cursor: pointer;
+    
+}
+
+.content__container button:hover {
+    background-color: var(--primary-color-dark);
+}
+
+.image__container {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    place-content: center;
+}
+
+.image__container img {
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+    border-radius: 10px;
+
+}
+
+.image__container img:nth-child(1){
+    transform: translateY(70px);
+
+}
+.image__container img:nth-child(2){
+    transform: translateY(-70px);
+
+}
+
+.image__content {
+    position: absolute;
+    width: 100%;
+    max-width: 310px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-35%, 50%);
+    background: linear-gradient(to right, var(--primary-color), var(--primary-color-dark));
+    color: var(--white);
+    padding: 1rem 2rem;
+    border-radius: 10px;
+   
+}
+
+.image__content li {
+    margin-bottom: 0.5rem;   
+    list-style-type: disc; /* Set bullets for unordered lists */
+
+}
+
+
+
+/*media responsive */
+
 @media (max-width: 1280px){
     header{
         padding: 14px 2%;
@@ -158,4 +287,27 @@ header{
     .navbar.open {
         right: 2%;
     }
+}
+
+@media (width < 900px) {
+    .link a:not(.nav__btn) {
+        display: none;
+    }
+
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .content__container{
+        text-align: center;
+    }
+    
+    .content__container form {
+        margin-right: auto;
+        margin-left: auto;
+        align-items: center;
+
+    }
+
+    
 }
