--- a/css/styles.css
+++ b/css/styles.css
@@ -1,515 +1,574 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    text-decoration: none;
-    list-style: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
+  list-style: none;
 }
 
 :root {
-    --bg-color: #ffffff;
-    --text-color: #000000;
-    --main-color: #8a88ff;
-    --primary-color: #5c48ee;
-    --primary-color-dark: #0f1e6a;
-    --secondary-color: #f9fafe;
-    --text-color2: #333333;
-    --white: #ffffff;
-    --max-width: 1200px;
+  --bg-color: #ffffff;
+  --text-color: #000000;
+  --main-color: #8a88ff;
+  --primary-color: #5c48ee;
+  --primary-color-dark: #0f1e6a;
+  --secondary-color: #f9fafe;
+  --text-color2: #333333;
+  --white: #ffffff;
+  --max-width: 1200px;
 }
 
-body{
-    min-height: 100vh;
-    background: var(--bg-color);
-    color: var(--text-color);
+body {
+  min-height: 100vh;
+  background: var(--bg-color);
+  color: var(--text-color);
 }
 
 /* navbar */
-header{
-    position: fixed;
-    width: 100%;
-    top: 0;
-    right: 0;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: #ffffff;
-    padding: 20px 10%;
-    transition: all .50s ease;
-    margin-bottom: 150px; /* Increase space */
-
+header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #ffffff;
+  padding: 20px 10%;
+  transition: all 0.5s ease;
+  margin-bottom: 150px; /* Increase space */
 }
 
 .logo {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .logo i {
-    color: var(--main-color);
-    font-size: 28px;
-    margin-right: 3px;
+  color: var(--main-color);
+  font-size: 28px;
+  margin-right: 3px;
 }
 
 .logo span {
-    color: var(--text-color);
-    font-size: 1.7rem;
-    font-weight: 600;
+  color: var(--text-color);
+  font-size: 1.7rem;
+  font-weight: 600;
 }
 
 .navbar {
-    display: flex;
+  display: flex;
 }
 
 .navbar a {
-    color: var(--text-color);
-    font-size: 1.1rem;
-    font-weight: 500;
-    padding: 5px 0 ;
-    margin: 0 30px;
-    transition: all .50s ease;
+  color: var(--text-color);
+  font-size: 1.1rem;
+  font-weight: 500;
+  padding: 5px 0;
+  margin: 0 30px;
+  transition: all 0.5s ease;
 }
 
 .navbar a:hover {
-    color: var(--main-color);
-
+  color: var(--main-color);
 }
 
 .navbar a.active {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .main {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .main a {
-    margin-right: 25px;
-    margin-left: 10px;
-    color: var(--text-color);
-    font-size: 1.1rem;
-    font-weight: 500;
-    transition: all .50s ease;
+  margin-right: 25px;
+  margin-left: 10px;
+  color: var(--text-color);
+  font-size: 1.1rem;
+  font-weight: 500;
+  transition: all 0.5s ease;
 }
 
 .user {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .user i {
-    color: var(--main-color);
-    font-size: 28px;
-    margin-right: 7px;
+  color: var(--main-color);
+  font-size: 28px;
+  margin-right: 7px;
 }
 
 .main a:hover {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 #menu-icon {
-    font-size: 35px;
-    color: var(--text-color);
-    cursor: pointer;
-    z-index: 10001;
-    display: none;
+  font-size: 35px;
+  color: var(--text-color);
+  cursor: pointer;
+  z-index: 10001;
+  display: none;
 }
 
 /* landing page */
 
-.container{
-    max-width: var(--max-width);
-    margin: auto;
-    padding: 1rem;
-    min-height: calc(100vh - 100px);
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 5rem;
-   
+.container {
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 1rem;
+  min-height: calc(100vh - 100px);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5rem;
 }
 
 .content__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 80px; /* Adjust this value to match the height of your header */
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 80px; /* Adjust this value to match the height of your header */
 }
 
 .content__container h1 {
-    font-size: 3rem;
-    font-weight: 400;
-    line-height: 3.5rem;
-    color: var(--primary-color-dark);
-    margin-bottom: 1rem;
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 3.5rem;
+  color: var(--primary-color-dark);
+  margin-bottom: 1rem;
 }
 
 .heading__1 {
-    font-weight: 700;
-    
+  font-weight: 700;
 }
 
 .heading__2 {
-    font-weight: 700;
-    color: var(--primary-color);
+  font-weight: 700;
+  color: var(--primary-color);
 }
 
 .content__container p {
-
-    font-size: 1rem;
-    color: var(--text-color2);
-    margin-bottom: 2rem;
-    font-family: 'Poppins', sans-serif;
-
-
+  font-size: 1rem;
+  color: var(--text-color2);
+  margin-bottom: 2rem;
+  font-family: "Poppins", sans-serif;
 }
 
 .content__container form {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .content__container button {
-    width: fit-content;
-    padding: 1rem;
-    font-size: .8rem;
-    white-space: nowrap;
-    background-color: var(--primary-color);
-    color: var(--white);
-    outline: none;
-    border: none;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    cursor: pointer;
-    
+  width: fit-content;
+  padding: 1rem;
+  font-size: 0.8rem;
+  white-space: nowrap;
+  background-color: var(--primary-color);
+  color: var(--white);
+  outline: none;
+  border: none;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  cursor: pointer;
 }
 
 .content__container button:hover {
-    background-color: var(--primary-color-dark);
+  background-color: var(--primary-color-dark);
 }
 
 .image__container {
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
-    place-content: center;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  place-content: center;
 }
 
 .image__container img {
-    width: 100%;
-    max-width: 300px;
-    margin: auto;
-    border-radius: 10px;
-
+  width: 100%;
+  max-width: 300px;
+  margin: auto;
+  border-radius: 10px;
 }
 
-.image__container img:nth-child(1){
-    transform: translateY(70px);
-
+.image__container img:nth-child(1) {
+  transform: translateY(70px);
 }
-.image__container img:nth-child(2){
-    transform: translateY(-70px);
-
+.image__container img:nth-child(2) {
+  transform: translateY(-70px);
 }
 
 .image__content {
-    position: absolute;
-    width: 100%;
-    max-width: 310px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-35%, 50%);
-    background: linear-gradient(to right, var(--primary-color), var(--primary-color-dark));
-    color: var(--white);
-    padding: 1rem 2rem;
-    border-radius: 10px;
-   
+  position: absolute;
+  width: 100%;
+  max-width: 310px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-35%, 50%);
+  background: linear-gradient(
+    to right,
+    var(--primary-color),
+    var(--primary-color-dark)
+  );
+  color: var(--white);
+  padding: 1rem 2rem;
+  border-radius: 10px;
 }
 
 .image__content li {
-    margin-bottom: 0.5rem;   
-    list-style-type: disc; /* Set bullets for unordered lists */
-
+  margin-bottom: 0.5rem;
+  list-style-type: disc; /* Set bullets for unordered lists */
 }
 
 /* this is the css for the about us part */
 
 .about {
-    height: 100vh;
-    width: 100%;
-    background: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  width: 100%;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .about .main-about img {
-        width: 400px;
-        max-width: 100%;
-        height: auto;
-        padding: 0 10px;
+  width: 400px;
+  max-width: 100%;
+  height: auto;
+  padding: 0 10px;
 }
 
 .all-text {
-    width: 600px;
-    max-width: 100%;
-    padding: 0 10px;
+  width: 600px;
+  max-width: 100%;
+  padding: 0 10px;
 }
 
 .main-about {
-    width: 1290px;
-    max-width: 95%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
+  width: 1290px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .all-text h4 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    color: #777777;
-    letter-spacing: 1px;
-    font-weight: 400;
-    margin-bottom: 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  color: #777777;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin-bottom: 10px;
 }
 
 .all-text h1 {
-    font-size: 35px;
-    color: #111111;
-    font-weight: 700;
-    margin-bottom: 20px;
+  font-size: 35px;
+  color: #111111;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .all-text p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    color: #777777;
-    line-height: 30px;
-    margin-bottom: 35px;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  color: #777777;
+  line-height: 30px;
+  margin-bottom: 35px;
 }
 
 .btn-about button {
-    background: var(--primary-color);
-    padding: 20px 32px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #ffffff;
-    border: none;
-    outline: none;
-    box-shadow: 0px 16px 32px 0px rgb(0 0 0 / 6%);
-    margin-right: 20px;
+  background: var(--primary-color);
+  padding: 20px 32px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
+  border: none;
+  outline: none;
+  box-shadow: 0px 16px 32px 0px rgb(0 0 0 / 6%);
+  margin-right: 20px;
 }
 
 .btn-about button:hover {
-    background-color:var(--primary-color-dark);
-    color: white;
-    transition: .3s;
-    cursor: pointer;
+  background-color: var(--primary-color-dark);
+  color: white;
+  transition: 0.3s;
+  cursor: pointer;
 }
-
-
-
 
 /* this is the css for the services part */
 
 .container_features {
-    width: 100%;
-    height: 100vh;
-    padding: 0 8%;
-    
+  width: 100%;
+  height: auto;
+  padding: 0 8%;
 }
 
 .container_features h1 {
-    text-align: center;
-    padding-top: 10%;
-    margin-bottom: 60px;
-    font-weight: 600;
-    position: relative;
+  text-align: center;
+  padding-top: 10%;
+  margin-bottom: 60px;
+  font-weight: 600;
+  position: relative;
 }
 
-.container_features h1::after{
-    content:  '';
-    background: #5c48ee; 
-    width: 100px;
-    height: 5px;
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    transform: translateX(-50%);
+.container_features h1::after {
+  content: "";
+  background: #5c48ee;
+  width: 100px;
+  height: 5px;
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .row {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 30px;
 }
 
 .service {
-    text-align: center;
-    padding: 25px 10px;
-    border-radius: 5px;
-    font-size: 14px;
-    cursor: pointer;
-    background: transparent;
-    transition: transform 0.5s, background 0.5s;
+  text-align: center;
+  padding: 25px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  background: transparent;
+  transition: transform 0.5s, background 0.5s;
 }
 
 .service i {
-    font-size: 40px;
-    margin-bottom: 10px;
-    color: #5c48ee; 
-
+  font-size: 40px;
+  margin-bottom: 10px;
+  color: #5c48ee;
 }
 
 .service h2 {
-    font-weight: 600;
-    margin-bottom: 8px;
+  font-weight: 600;
+  margin-bottom: 8px;
 }
 
 .service:hover {
-    background: #5c48ee; 
-    color: #fff;
-    transform: scale(1.05);
+  background: #5c48ee;
+  color: #fff;
+  transform: scale(1.05);
 }
 
-.service:hover i{
-    color: #fff;
+.service:hover i {
+  color: #fff;
 }
 
+/* this is the css for the blog part */
+
+.container_blog {
+  width: 100%;
+  height: auto;
+  background-color: #f7f7f7;
+  margin-top: 55px;
+}
+
+.container_blog .blog-section {
+  width: 80%;
+  margin: 0px auto;
+}
+
+.container_blog .blog-section .blog-heading {
+  width: 60%;
+  text-align: center;
+  margin: 0px auto;
+}
+
+.container_blog .blog-section .blog-heading h1 {
+  padding-top: 20px;
+  font-size: 42px;
+  color: #111111;
+}
+
+.container_blog .blog-section .blog-heading p {
+  margin-top: 10px;
+  color: #000000;
+  font-size: 17px;
+  line-height: 1.5;
+}
+
+.blog-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px auto;
+  flex-wrap: wrap;
+}
+
+.blog-content .card {
+  flex: 1;
+  margin: 30px 15px;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
+  max-width: 350px; /* Limit card width */
+}
+.blog-content .card img {
+  width: 100%;
+  height: auto;
+}
+
+.blog-content .card .text-title {
+  font-size: 15px;
+  color: #000;
+  font-weight: 600;
+  margin: 5px 10px;
+}
+
+.blog-content .card span {
+  color: #6e6e6e;
+  font-weight: normal;
+}
+
+.blog-content .card h4 {
+  margin: 5px 10px;
+  font-size: 16px;
+  color: #6e6e6e;
+}
+
+.blog-content .card p {
+  font-size: 14px;
+  margin: 5px 10px;
+  line-height: 1.5;
+  color: #4f4f4f;
+}
+
+.blog-content .card a {
+  text-decoration: none;
+  font-size: 17px;
+  display: inline-block;
+  padding: 6px 10px;
+  color: #fff;
+  background-color: #5c48ee;
+  margin: 15px 10px;
+  border-radius: 5px;
+}
+
+.blog-content .card a:hover {
+  background-color: var(--primary-color-dark);
+  color: white;
+  transition: 0.4s;
+}
 
 /*media responsive */
+/* navbar header media responsive */
 
-@media (width < 900px) {
-    .link a:not(.nav__btn) {
-        display: none;
-    }
+@media (max-width: 1280px) {
+  header {
+    padding: 14px 2%;
+    transition: 0.2s;
+  }
 
-    .container {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
-    .content__container{
-        text-align: center;
-    }
-    
-    .content__container form {
-        margin-right: auto;
-        margin-left: auto;
-        align-items: center;
-
-    }
-
-    
+  .navbar a {
+    padding: 5px 0;
+    margin: 0px 20px;
+  }
 }
 
-@media (max-width: 1280px){
-    header{
-        padding: 14px 2%;
-        transition: .2s;
-    }
+@media (max-width: 1090px) {
+  #menu-icon {
+    display: block;
+  }
+  .navbar {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    width: 270px;
+    height: 40vh;
+    background: var(--main-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+  }
 
-    .navbar a {
-        padding: 5px 0;
-        margin: 0px 20px;
-    }
-    
+  .navbar a {
+    display: block;
+    margin: 12px 0;
+    padding: 0px 25px;
+    transition: all 0.5s ease;
+  }
+  .navbar a:hover {
+    color: var(--text-color);
+    transform: translateY(5px);
+  }
+
+  .navbar a.active {
+    color: var(--text-color);
+  }
+
+  .navbar.open {
+    right: 2%;
+  }
 }
 
-@media (max-width: 1090px){ 
-    #menu-icon {
-        display: block;
+/* landing page responsive */
 
-    }
-    .navbar{
-            position: absolute;
-            top: 100%;
-            right: -100%;
-            width: 270px;
-            height: 40vh;
-            background: var(--main-color);
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            border-radius: 10px;
-            transition: all .30s ease;
-    }
+@media (max-width < 900px) {
+  .link a:not(.nav__btn) {
+    display: none;
+  }
 
-    .navbar a {
-        display: block;
-        margin: 12px 0;
-        padding: 0px 25px;
-        transition: all .50s ease;
-    }
-    .navbar a:hover {
-        color: var(--text-color);
-        transform: translateY(5px);
-    }
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 
-    .navbar a.active {
-        color: var(--text-color);
-    }
+  .content__container {
+    text-align: center;
+  }
 
-    .navbar.open {
-        right: 2%;
-    }
-}
-
-@media (width < 900px) {
-    .link a:not(.nav__btn) {
-        display: none;
-    }
-
-    .container {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
-    .content__container{
-        text-align: center;
-    }
-    
-    .content__container form {
-        margin-right: auto;
-        margin-left: auto;
-        align-items: center;
-
-    }
-
-    
+  .content__container form {
+    margin-right: auto;
+    margin-left: auto;
+    align-items: center;
+  }
 }
 /* about media responsive */
 
 @media screen and (max-width: 1250px) {
-    .about {
-        width: 100%;
-        height: auto;
-        padding: 60px 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .all-text {
-        text-align: center;
-        margin-top: 40px;
-
-    }
+  .about {
+    width: 100%;
+    height: auto;
+    padding: 60px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .all-text {
+    text-align: center;
+    margin-top: 40px;
+  }
 }
 
 @media screen and (max-width: 650px) {
-    .about .main-about img {
-        margin-top: 25px;
-        order: 2; 
-        width: 300px;
-    }
+  .about .main-about img {
+    margin-top: 25px;
+    order: 2;
+    width: 300px;
+  }
 
-    .all-text h1 {
-        font-size: 45px;
-        margin-bottom: 20px;
-    }
-    
+  .all-text h1 {
+    font-size: 45px;
+    margin-bottom: 20px;
+  }
+}
+
+/* blog media responsive */
+
+@media screen and (max-width: 768px) {
+  .blog-content {
+    flex-direction: column;
+  }
 }
