footer with html/css

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,10 @@ body {
   background: var(--bg-color);
   color: var(--text-color);
 }
-
+html {
+  scroll-behavior: smooth;
+  scroll-padding: 5rem;
+}
 /* navbar */
 header {
   position: fixed;
@@ -582,6 +585,86 @@ header {
   background: var(--primary-color-dark);
 }
 
+/* footer */
+
+footer {
+  background-color: #111;
+}
+
+.footerContainer {
+  width: 100%;
+  padding: 20px 30px 20px;
+}
+
+.socialIcons {
+  display: flex;
+  justify-content: center;
+}
+
+.socialIcons a {
+  text-decoration: none;
+  padding: 10px;
+  background-color: var(--main-color);
+  margin: 10px;
+  border-radius: 50%;
+}
+.socialIcons a i {
+  font-size: 2em;
+  color: black;
+  opacity: 0.9;
+}
+
+.socialIcons a:hover {
+  background-color: var(--primary-color);
+  transition: 0.5s;
+}
+
+.socialIcons a:hover {
+  color: white;
+  background: white;
+  transition: 0.5s;
+}
+
+.footerNav {
+  margin: 30px 0;
+}
+
+.footerNav ul {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+}
+
+.footerNav ul li a {
+  color: white;
+  margin: 20px;
+  text-decoration: none;
+  font-size: 1.3em;
+  opacity: 0.7;
+  transition: 0.5s;
+}
+
+.footerNav ul li a:hover {
+  opacity: 1;
+}
+
+.footerBottom {
+  background-color: #000;
+  padding: 20px;
+  text-align: center;
+}
+
+.footerBottom p {
+  color: white;
+}
+.designer {
+  opacity: 0.7;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin: 0px 5px;
+}
+
 /*media responsive styles */
 /* navbar header media responsive styles */
 
@@ -728,5 +811,17 @@ header {
   .container_contact .content_contact .right-side {
     width: 100%;
     margin-left: 0;
+  }
+}
+/* media responsive for the footer */
+@media (max-width: 700px) {
+  .footerNav ul {
+    flex-direction: column;
+  }
+
+  .footerNav ul li {
+    width: 100%;
+    text-align: center;
+    margin: 10px;
   }
 }
